# behavior

./: behavior_node_test.py  行为树相关设计及约定.md
behavior-process/: CMakeLists.txt  README.md
behavior-process/include/action_libs/: dest_search_plugin.hpp  navline_plugin.hpp  rally_plugin.hpp  topic_trans_plugin.hpp  trace_attack_plugin.hpp
behavior-process/include/behaviortree_ros2/: bt_service_node.hpp  bt_topic_pub_node.hpp  bt_topic_sub_node.hpp  ros_node_params.hpp
behavior-process/include/check/: CheckLock.hpp  CheckWayViaTp.hpp
behavior-process/include/control/: CameraCtrl.hpp  FuelUp.hpp  NavwayCtrl.h  TopicTrans.hpp
behavior-process/include/dm/: types.hpp
behavior-process/include/get/: GetLocation.hpp  GetOutLocation.hpp  GetTraceCtrl.hpp  GetTraceInfo.hpp
behavior-process/include/info/: CommonCtrl.hpp  OffboardInfo.hpp  Param.hpp
behavior-process/include/manage/: ActionsMgr.hpp  SpiralLineGen.hpp  action_plugin_mgr.hpp
behavior-process/include/set/: SetLine.hpp  SetRallyDst.hpp  SetRole.hpp  SetTraceAttackObj.hpp  SetTrigger.hpp
behavior-process/include/status/: Weapon.hpp
behavior-process/include/utility/: Utility.hpp
behavior-process/src/: TaskDecision.cpp  behavior-node.cpp
behavior-process/src/action_libs/: core_plugin.cpp  navline_plugin.cpp  rally_plugin.cpp  takeoff_plugin.cpp  topic_trans_plugin.cpp  trace_attack_plugin.cpp
behavior-process/src/check/: CheckArriveDst.cpp  CheckQuitSearch.cpp  CheckStartTask.cpp  CheckWayViaTp.cpp
behavior-process/src/control/: LockCtrl.cpp  RouteLocal.cpp  TopicTrans.cpp
behavior-process/src/get/: GetLocation.cpp  GetTraceInfo.cpp
behavior-process/src/manage/: SpiralLineGen.cpp  action_plugin_mgr.cpp
behavior-process/src/set/: SetDstPt.cpp  SetRallyDst.cpp  SetTraceAttackObj.cpp  SetTrigger.cpp
behavior-process/src/status/: CommandStatus.cpp
behavior-process/src/utility/: Utility.cpp
behavior-process/tree/: Attack-multi-moving-lock.xml  Attack.xml  AutoRescue.xml  AutoTrace.xml  Ctrl-continue-viaself.xml  Ctrl.xml  FlightmodeCtrl.xml  PreSearch-routelocal.xml  PreSearch.xml  Rally.xml  Search-FshStage.xml  Search.xml  Trace.xml  config.json
behavior-process/tree-3588s/: FlightmodeCtrl.xml
behavior_lib/: CMakeLists.txt  README.en.md  README.md  package.xml
behavior_lib/include/check/: CheckAllArriveDst.hpp  CheckArriveDst.hpp  CheckQuitSearch.hpp  CheckStartTask.hpp  CheckWayViaTp.hpp
behavior_lib/include/control/: Joystick.hpp  LockCtrl.hpp  OffboardCtrl.hpp  RouteLocal.hpp  TaskDecision.hpp  TraceAttackCtrl.hpp
behavior_lib/include/dm/: bytes.hpp
behavior_lib/include/get/: GetGroupLocation.hpp  GetLocation.hpp
behavior_lib/include/info/: CommonCtrl.hpp  CommonSet.hpp  OffboardInfo.hpp  Param.hpp
behavior_lib/include/manage/: ActionsMgr.hpp  SpiralLineGen.hpp  action_plugin_mgr.hpp
behavior_lib/include/plugin/: base_plugin.hpp  interface.hpp
behavior_lib/include/set/: SetDstPt.hpp  SetLine.hpp
behavior_lib/include/status/: CommandStatus.hpp
behavior_lib/include/utility/: Utility.hpp
behavior_lib/src/: param.cpp
behavior_lib/src/check/: CheckAllArriveDst.cpp  CheckArriveDst.cpp  CheckWayViaTp.cpp
behavior_lib/src/control/: FlightmodeCtrl.cpp  Joystick.cpp  LockCtrl.cpp  NavwayCtrl.cpp  OffboardCtrl.cpp  RouteLocal.cpp  TaskDecision.cpp  TraceAttackCtrl.cpp
behavior_lib/src/get/: GetGroupLocation.cpp  GetLocation.cpp
behavior_lib/src/manage/: ActionsMgr.cpp  SpiralLineGen.cpp  action_plugin_mgr.cpp
behavior_lib/src/plugin/: core_plugin.cpp
behavior_lib/src/set/: SetDstPt.cpp  SetLine.cpp  SetTrigger.cpp
behavior_lib/src/status/: CommandStatus.cpp  Weapon.cpp
behavior_lib/src/utility/: Utility.cpp
behavior_node/: CMakeLists.txt  behavior_node_test.py  package.xml  service.py
behavior_node/config/: behavior_config.yaml
behavior_node/include/: base_nodes.hpp
behavior_node/include/behavior_node/: base_nodes.hpp  behavior_control_node.hpp  behavior_executor.hpp  hebavior_node.hpp
behavior_node/launch/: behavior_node.launch.py
behavior_node/src/: behavior_node.cpp
behavior_node/task/: 多机多分组任务例子.json  悬停.json  目标打击.json  直接返航.json  编队飞行.json  航线搜索.json  航线飞行.json  详查.json  起飞.json  降落.json
behavior_node/tree/: Attack.xml  AutoTrace.xml  Comprehensive.xml  ComprehensiveMission.xml  Emergency.xml  FormFly.xml  GoToDst.xml  Hover.xml  JoyStick.xml  Land.xml  LockCtrl.xml  Loiter.xml  Navline.xml  ReturnToLaunch.xml  RtlDirect.xml  Search.xml  SetLine.xml  SrchViaLine.xml  TakeOff.xml  TraceAttack.xml  WayPoint.xml  WaypointMission.xml  land_test.xml
behavior_test_simulation/: CMakeLists.txt  README.md  build_with_custom_msgs.sh  package.xml  start_test.sh
behavior_test_simulation/config/: simulation_params.yaml  test_scenarios.yaml  vehicle_configs.yaml
behavior_test_simulation/data/: expected_results.json  simulation_objects.json  test_waypoints.json
behavior_test_simulation/launch/: test_behavior.launch.py
behavior_test_simulation/scripts/: behavior_tree_tester.py
behavior_test_simulation/src/: simulation_node.cpp  test_client.cpp  vehicle_simulator.cpp
behavior_test_simulation/test_trees/: goto_test.xml  integrated_test.xml  simple_test.xml  takeof_test.xml  trace_test.xml
behavior_test_simulation/tools/: clean_workspace.sh  generate_report.py  run_all_tests.sh  setup_environment.sh
dds2ros/: CMakeLists.txt  README.md  dds_profiles.xml  readme.txt  ros2dds_profiles.xml
dds2ros/idl/: AttackObjectDesignate.idl  AutoLine.idl  CommandRequest.idl  CommandResponse.idl  ObjectFilter.idl  ObjectReport.idl  OpticalPose.idl  ParamShort.idl  SimpleVehicle.idl  StageHead.idl  StageSet.idl  StatusTask.idl  TaskStage.idl  VehiWarning.idl
dds2ros/inc/: BaseCtrl.h  CommApi.h  DDSCtrl.h  DDSPubSub.h  Ros1Ctrl.h  Ros2Ctrl.h  Uncreatable.h
dds2ros/src/: CommApi.cpp  DDS2RosNode.cpp  DDSCtrl.cpp  DDSPubSub.cpp  GrdControl.cpp  OptInfoNode.cpp  Ros1Ctrl.cpp  Ros2Ctrl.cpp  TestNode.cpp
new_node/: CMakeLists.txt  README.md  package.xml
new_node/config/: behavior_config.yaml
new_node/src/: main.cpp
new_node/tree/: main_behavior_tree.xml
(+136 files in other folders)
